--- a/src/templates/landing.html
+++ b/src/templates/landing.html
@@ -1090,7 +1090,8 @@
                 Certificación oficial del Gobierno de Tierra del Fuego para potenciar tu perfil profesional
             </p>
             <div class="hero-buttons">
-                <a href="{% url 'lista_polos' %}" class="btn btn-primary btn-lg">Explorar Cursos</a                {% if user.is_authenticated %}
+                <a href="{% url 'lista_polos' %}" class="btn btn-primary btn-lg">Explorar Cursos</a>
+                {% if user.is_authenticated %}
                     {% if es_empresa %}
                         <a href="{% url 'empresas:mi_empresa' %}" class="btn btn-secondary btn-lg"><i class="fa-solid fa-building"></i> Punto Empresarial</a>
                     {% elif user.is_staff or user.is_superuser %}
