--- a/src/templates/administracion/crear_curso.html
+++ b/src/templates/administracion/crear_curso.html
@@ -16,6 +16,10 @@
 <li><a href="{% url 'empresas:mesa_entrada_list' %}"><i class="fa-solid fa-building"></i> Solicitudes Empresas</a></li>
 <li><a href="{% url 'empresas:gestion_empresas' %}"><i class="fa-solid fa-building"></i> Gestión Empresas</a></li>
 {% if es_admin_completo %}
+<li><a href="{% url 'empresas:turnos_admin' %}"><i class="fa-solid fa-calendar"></i> Turnos Empresas</a></li>
+{% endif %}
+<li><a href="{% url 'empresas:turnos_hoy' %}"><i class="fa-solid fa-calendar-check"></i> Asistencia Empresas</a></li>
+{% if es_admin_completo %}
 <li><a href="{% url 'administracion:gestion_usuarios' %}"><i class="fa-solid fa-users-cog"></i> Gestión Usuarios</a></li>
 {% endif %}
 <li><a href="{% url 'administracion:buscador_estudiantes' %}"><i class="fa-solid fa-search"></i> Buscar Estudiantes</a></li>
@@ -26,9 +30,6 @@
 <li><a href="{% url 'administracion:estadisticas' %}"><i class="fa-solid fa-chart-bar"></i> Estadísticas</a></li>
 {% endif %}
 <li><a href="{% url 'administracion:panel_asistencia' %}"><i class="fa-solid fa-calendar-check"></i> Asistencias</a></li>
-{% if es_admin_completo %}
-<li><a href="{% url 'administracion:docentes_cursos' %}"><i class="fa-solid fa-chalkboard-teacher"></i> Docentes y Cursos</a></li>
-{% endif %}
 <li><a href="{% url 'usuario:mi_perfil' %}"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
 {% if es_admin_completo %}
 <li><a href="{% url 'admin:index' %}"><i class="fa-solid fa-cogs"></i> Django Admin</a></li>
