--- a/src/templates/dashboard/empresa.html
+++ b/src/templates/dashboard/empresa.html
@@ -6,6 +6,7 @@
 
 {% block sidebar_menu %}
 <li><a href="{% url 'dashboard_empresa' %}" class="active"><i class="fa-solid fa-home"></i> Inicio</a></li>
+<li><a href="{% url 'empresas:asistencia_empresas' %}"><i class="fa-solid fa-calendar-check"></i> Asistencia Empresas</a></li>
 <li><a href="{% url 'usuario:mi_perfil' %}"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
 <li><a href="{% url 'empresas:mi_empresa' %}"><i class="fa-solid fa-building"></i> Mi Empresa / Startup</a></li>
 {% endblock %}
