--- a/src/templates/empresas/gestion_empresas.html
+++ b/src/templates/empresas/gestion_empresas.html
@@ -15,7 +15,9 @@
 {% if es_admin_completo %}
 <li><a href="{% url 'empresas:mesa_entrada_list' %}"><i class="fa-solid fa-building"></i> Solicitudes Empresas</a></li>
 <li><a href="{% url 'empresas:gestion_empresas' %}" class="active"><i class="fa-solid fa-building"></i> Gestión Empresas</a></li>
+<li><a href="{% url 'empresas:turnos_admin' %}"><i class="fa-solid fa-calendar"></i> Turnos Empresas</a></li>
 {% endif %}
+<li><a href="{% url 'empresas:turnos_hoy' %}"><i class="fa-solid fa-calendar-check"></i> Asistencia Empresas</a></li>
 {% if es_admin_completo %}
 <li><a href="{% url 'administracion:gestion_usuarios' %}"><i class="fa-solid fa-users-cog"></i> Gestión Usuarios</a></li>
 {% endif %}
@@ -27,9 +29,6 @@
 <li><a href="{% url 'administracion:estadisticas' %}"><i class="fa-solid fa-chart-pie"></i> Estadísticas</a></li>
 {% endif %}
 <li><a href="{% url 'administracion:panel_asistencia' %}"><i class="fa-solid fa-calendar-check"></i> Asistencias</a></li>
-{% if es_admin_completo %}
-<li><a href="{% url 'administracion:docentes_cursos' %}"><i class="fa-solid fa-chalkboard-teacher"></i> Docentes y Cursos</a></li>
-{% endif %}
 <li><a href="{% url 'usuario:mi_perfil' %}"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
 {% if es_admin_completo %}
 <li><a href="{% url 'admin:index' %}"><i class="fa-solid fa-cogs"></i> Django Admin</a></li>
@@ -40,7 +39,9 @@
 {% if es_admin_completo %}
 <li><a href="{% url 'empresas:mesa_entrada_list' %}"><i class="fa-solid fa-building"></i> Solicitudes Empresas</a></li>
 <li><a href="{% url 'empresas:gestion_empresas' %}" class="active"><i class="fa-solid fa-building"></i> Gestión Empresas</a></li>
+<li><a href="{% url 'empresas:turnos_admin' %}"><i class="fa-solid fa-calendar"></i> Turnos Empresas</a></li>
 {% endif %}
+<li><a href="{% url 'empresas:turnos_hoy' %}"><i class="fa-solid fa-calendar-check"></i> Asistencia Empresas</a></li>
 <li><a href="{% url 'usuario:mi_perfil' %}"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
 {% endif %}
 {% endblock %}
@@ -87,7 +88,10 @@
     .empresas-table {
         width: 100%;
         border-collapse: collapse;
-        min-width: 1080px;
+        min-width: 760px;
+    }
+    @media (min-width: 1120px) {
+        .empresas-table { min-width: 1080px; }
     }
 
     .empresas-table thead {
