--- a/src/templates/empresas/mi_empresa.html
+++ b/src/templates/empresas/mi_empresa.html
@@ -11,7 +11,9 @@
     {% if es_admin_completo %}
     <li><a href="{% url 'empresas:mesa_entrada_list' %}"><i class="fa-solid fa-building"></i> Solicitudes Empresas</a></li>
     <li><a href="{% url 'empresas:gestion_empresas' %}"><i class="fa-solid fa-building"></i> Gestión Empresas</a></li>
+    <li><a href="{% url 'empresas:turnos_admin' %}"><i class="fa-solid fa-calendar"></i> Turnos Empresas</a></li>
     {% endif %}
+    <li><a href="{% url 'empresas:turnos_hoy' %}"><i class="fa-solid fa-calendar-check"></i> Asistencia Empresas</a></li>
     <li><a href="{% url 'usuario:mi_perfil' %}"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
 {% elif es_docente %}
     <li><a href="{% url 'dashboard_docente' %}"><i class="fa-solid fa-home"></i> Inicio</a></li>
@@ -22,6 +24,7 @@
     <li><a href="{% url 'usuario:mi_perfil' %}"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
 {% elif empresa or es_empresa %}
     <li><a href="{% url 'dashboard_empresa' %}"><i class="fa-solid fa-home"></i> Inicio</a></li>
+    <li><a href="{% url 'empresas:asistencia_empresas' %}"><i class="fa-solid fa-calendar-check"></i> Asistencia Empresas</a></li>
     <li><a href="{% url 'usuario:mi_perfil' %}"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
     <li><a href="{% url 'empresas:mi_empresa' %}" class="active"><i class="fa-solid fa-building"></i> Mi Empresa / Startup</a></li>
 {% else %}
