--- a/src/templates/usuario/cambiar_contrasena.html
+++ b/src/templates/usuario/cambiar_contrasena.html
@@ -25,11 +25,16 @@
     <li><a href="{% url 'administracion:estadisticas' %}"><i class="fa-solid fa-chart-bar"></i> Estadísticas</a></li>
     {% endif %}
     <li><a href="{% url 'administracion:panel_asistencia' %}"><i class="fa-solid fa-calendar-check"></i> Asistencias</a></li>
-    {% if es_admin_completo %}
-    <li><a href="{% url 'administracion:docentes_cursos' %}"><i class="fa-solid fa-chalkboard-teacher"></i> Docentes y Cursos</a></li>
-    {% endif %}
+    {% if es_admin_completo or es_mesa_entrada %}
     <li><a href="{% url 'empresas:mesa_entrada_list' %}"><i class="fa-solid fa-building"></i> Solicitudes Empresas</a></li>
+    {% endif %}
+    {% if es_admin_completo %}
     <li><a href="{% url 'empresas:gestion_empresas' %}"><i class="fa-solid fa-building"></i> Gestión Empresas</a></li>
+    <li><a href="{% url 'empresas:turnos_admin' %}"><i class="fa-solid fa-calendar"></i> Turnos Empresas</a></li>
+    {% endif %}
+    {% if es_admin_completo or es_mesa_entrada %}
+    <li><a href="{% url 'empresas:turnos_hoy' %}"><i class="fa-solid fa-calendar-check"></i> Asistencia Empresas</a></li>
+    {% endif %}
     <li><a href="{% url 'usuario:mi_perfil' %}"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
     {% if es_admin_completo %}
     <li><a href="{% url 'admin:index' %}"><i class="fa-solid fa-cogs"></i> Django Admin</a></li>
@@ -45,6 +50,7 @@
 {% elif es_empresa %}
     {# Menú para Empresas #}
     <li><a href="{% url 'dashboard_empresa' %}"><i class="fa-solid fa-home"></i> Inicio</a></li>
+    <li><a href="{% url 'empresas:asistencia_empresas' %}"><i class="fa-solid fa-calendar-check"></i> Asistencia Empresas</a></li>
     <li><a href="{% url 'usuario:mi_perfil' %}" class="active"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
     <li><a href="{% url 'empresas:mi_empresa' %}"><i class="fa-solid fa-building"></i> Mi Empresa / Startup</a></li>
 {% else %}
